tweet-list directive & styling fixes

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -100,14 +100,12 @@
 @import 'configs/variables',
         'configs/resets';
 
-
 @import 'utilities/clearfix-p',
         'utilities/center-p',
         'utilities/arrow-m',
         'utilities/breakpoint-m',
         'utilities/em-f',
         'utilities/nounit-f';
-
 
 @import 'layouts/wrap',
         'layouts/grid',
@@ -123,12 +121,11 @@
 
 @import 'fonts';
 
-@import 'modules/app-body',
-        'modules/menu',
+@import 'modules/menu',
+        'modules/tweet-list',
         'modules/tweet',
         'modules/author',
         'modules/toolbar',
-        'modules/tweets-popup',
         'modules/activity-panel',
         'modules/active-tweet',
         'modules/icons';
@@ -136,3 +133,4 @@
 @import 'states',
         'dev-grid',
         'shame';
+
