--- a/app/scripts/templates/tweet.html
+++ b/app/scripts/templates/tweet.html
@@ -1,4 +1,4 @@
-<div class="tweet">
+<div>
   <div class="l-tweet-content"
        ng-show="data.retweetedStatus">
     <div class="l-tweet-content__icon is-right-aligned">
