--- a/app/sass/configs/_resets.scss
+++ b/app/sass/configs/_resets.scss
@@ -79,7 +79,7 @@ body {
   line-height: $global-line-height;
 
   color: $color-tx;
-  background-color: $color-bg;
+  background-color: #C0DEED;
 }
 
 h1, h2, h3, h4, h5, h6,
