--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -5,94 +5,124 @@
  *
  */
 
-.link {
-  color: $color-dc-secondary;
-  text-decoration: underline;
-
-  &:hover {
-    text-decoration: none;
-  }
-}
-
-.axis {
-  shape-rendering: crispEdges;
-}
-
-//.x.axis line {
-//  stroke: white;
+//.topbar {
+//  position: fixed;
+//  z-index: 10;
+//  top: 0;
+//  left: 0;
+//  width: 100%;
+//
+//  background: $color-bg-secondary;
 //}
 
-//.x.axis .minor {
-//  stroke-opacity: 0.5;
+.app-body {
+  display: flex;
+  width: 588px;
+  margin: 0 auto;
+
+  &__timeline {
+    position: fixed;
+    height: 500px;
+    width: 50px;
+    margin-left: 15px;
+
+    background: red;
+  }
+
+  &__tweet-list {
+    flex: 1;
+    margin-left: -65px;
+  }
+}
+
+//.link {
+//  color: $color-dc-secondary;
+//  text-decoration: underline;
+//
+//  &:hover {
+//    text-decoration: none;
+//  }
 //}
+//
+//.axis {
+//  shape-rendering: crispEdges;
+//}
+//
+////.x.axis line {
+////  stroke: white;
+////}
+//
+////.x.axis .minor {
+////  stroke-opacity: 0.5;
+////}
 
-.axis path,
-.axis line {
-  fill: none;
-  stroke: black;
-}
-
-.line {
-  fill: none;
-  stroke: $color-dc-secondary;
-  stroke-width: 1px;
-}
-
-.area {
-  fill: rgba($color-dc-secondary, 0.3);
-}
-
-.ghost-total {
-  fill: rgba($color-border, 0.2);
-}
-
-.ghost-area {
-  fill: rgba($color-border, 0.5);
-}
-
-.dot {
-  fill: rgba($color-dc-secondary, 0.8);
-}
-
-.brush .extent {
-  stroke: none;
-  fill: white;
-  fill-opacity: 0.4;
-}
-
-.brush__handle {
-  stroke: none;
-  fill: $color-dc-secondary;
-  shape-rendering: crispEdges;
-}
-
-.tick {
-  font-size: 12px;
-}
-
-.axis--grid {
-  .domain {
-    display: none;
-  }
-
-  .tick line {
-    stroke: $color-bg-secondary;
-  }
-}
-
-.timeline-tweet {
-  stroke: darken($color-border, 20%);
-  stroke-width: 0;
-
-  cursor: pointer;
-
-  opacity: 0.2;
-}
-  .timeline-tweet--matching {
-    stroke-width: 1px;
-    opacity: 1;
-  }
-  .timeline-tweet--active {
-    stroke: $color-dc-secondary;
-    stroke-width: 3px;
-  }
+//.axis path,
+//.axis line {
+//  fill: none;
+//  stroke: black;
+//}
+//
+//.line {
+//  fill: none;
+//  stroke: $color-dc-secondary;
+//  stroke-width: 1px;
+//}
+//
+//.area {
+//  fill: rgba($color-dc-secondary, 0.3);
+//}
+//
+//.ghost-total {
+//  fill: rgba($color-border, 0.2);
+//}
+//
+//.ghost-area {
+//  fill: rgba($color-border, 0.5);
+//}
+//
+//.dot {
+//  fill: rgba($color-dc-secondary, 0.8);
+//}
+//
+//.brush .extent {
+//  stroke: none;
+//  fill: white;
+//  fill-opacity: 0.4;
+//}
+//
+//.brush__handle {
+//  stroke: none;
+//  fill: $color-dc-secondary;
+//  shape-rendering: crispEdges;
+//}
+//
+//.tick {
+//  font-size: 12px;
+//}
+//
+//.axis--grid {
+//  .domain {
+//    display: none;
+//  }
+//
+//  .tick line {
+//    stroke: $color-bg-secondary;
+//  }
+//}
+//
+//.timeline-tweet {
+//  stroke: darken($color-border, 20%);
+//  stroke-width: 0;
+//
+//  cursor: pointer;
+//
+//  opacity: 0.2;
+//}
+//  .timeline-tweet--matching {
+//    stroke-width: 1px;
+//    opacity: 1;
+//  }
+//  .timeline-tweet--active {
+//    stroke: $color-dc-secondary;
+//    stroke-width: 3px;
+//  }
