--- a/app/sass/modules/_tweet-list.scss
+++ b/app/sass/modules/_tweet-list.scss
@@ -1,13 +1,10 @@
-.tweet-list {
-  padding: 100px 0;
-
-  &__title {
-    width: 588px;
-    margin: 0 auto;
-  }
-
-  &__body {
-    width: 588px;
-    margin: 0 auto;
-  }
-}
+//.tweet-list {
+//  padding: 100px 0;
+//
+//
+//  &__title {
+//  }
+//
+//  &__body {
+//  }
+//}
