--- a/app/sass/modules/_tweet-list.scss
+++ b/app/sass/modules/_tweet-list.scss
@@ -1,10 +1,3 @@
-//.tweet-list {
-//  padding: 100px 0;
-//
-//
-//  &__title {
-//  }
-//
-//  &__body {
-//  }
-//}
+.tweet-list {
+  padding: 50px 0;
+}
