--- a/app/scripts/templates/tweet.html
+++ b/app/scripts/templates/tweet.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="tweet__extra">
-      {{data.author.name}} retweeted
+      {{data.author.name}} retweeted ({{data.createdAt | amDateFormat:'h:mm A - D MMM YYYY'}})
     </div>
   </div>
 
@@ -87,7 +87,7 @@
 
     <div class="l-block-small">
       <div class="tweet__extra">
-        {{tweet.createdAt | amDateFormat:'MMMM Do, h:mm a'}}
+        {{tweet.createdAt | amDateFormat:'h:mm A - D MMM YYYY'}}
       </div>
     </div>
 
