added commands to tweets, connected commands in tweets to the interface overlay

--- a/app/sass/configs/_variables.scss
+++ b/app/sass/configs/_variables.scss
@@ -26,7 +26,7 @@
   $color-border-secondary: #a0a0a0;
 
   $color-dc-primary:    #faff00;
-  $color-dc-secondary:  #4583ff;
+  $color-dc-secondary:  #1F98C7;
   $color-dc-tertiary:   #ff4d39;
   $color-dc-quaternary: #22c145;
 
