--- a/app/sass/modules/_toolbar.scss
+++ b/app/sass/modules/_toolbar.scss
@@ -68,11 +68,23 @@
   }
 
   &:hover {
-    outline: 1px solid $color-border;
+    position: relative;
+    z-index: 1;
+    outline: 2px solid $color-dc-secondary;
+    background: rgba($color-dc-secondary, 0.5);
   }
 }
   .t-item--open {
-    outline: 1px solid $color-border;
+    position: relative;
+    z-index: 1;
+    outline: 2px solid $color-dc-secondary;
+    background: rgba($color-dc-secondary, 0.5);
+  }
+  .t-item--highlighted {
+    position: relative;
+    z-index: 1;
+    outline: 2px solid $color-dc-secondary;
+    background: rgba($color-dc-secondary, 0.5);
   }
 
 .t-dropdown {
@@ -126,7 +138,7 @@
   }
 
   &:hover {
-    outline: 1px solid $color-border;
+    background: rgba($color-dc-secondary, 0.5);
   }
 }
   .td-item--first {
@@ -143,4 +155,10 @@
 
       background: $color-tx;
     }
+  }
+  .td-item--highlighted {
+    background: rgba($color-dc-secondary, 0.5);
+  }
+  .td-item--open {
+    background: rgba($color-dc-secondary, 0.5);
   }
