--- a/app/sass/modules/_tweet.scss
+++ b/app/sass/modules/_tweet.scss
@@ -214,3 +214,40 @@ $t-border: 1px solid #e1e8ed;
     content: "\e601";
   }
 }
+
+.commands-table {
+  display: flex;
+
+  border-top: $t-border;
+  border-bottom: $t-border;
+
+  &__cell {
+    padding: 3px 6px;
+
+    flex: 1;
+  }
+    &__cell--pre-border {
+      border-left: $t-border;
+    }
+}
+
+.commands-header {
+  padding: 3px 6px;
+
+  font-size: 10px;
+  text-transform: uppercase;
+  color: $color-tx-muted;
+}
+
+.command {
+  padding: 3px 6px;
+
+  font-size: 12px;
+
+  color: #1F98C7;
+
+  &:hover {
+    background: #EEF8FF;
+    outline: 1px solid #C0DEED;
+  }
+}
