--- a/app/scripts/templates/panelbar.html
+++ b/app/scripts/templates/panelbar.html
@@ -1,11 +1,11 @@
 <div class="toolbar toolbar--right">
   <div ng-repeat="panel in panels">
     <div class="toolbar__slot"
-         ng-mouseenter="open(panel)"
-         ng-mouseleave="hide()"
+         ng-click="clickOpen(panel)"
+         ng-mouseenter="hoverOpen(panel)"
          ng-if="!panel.divider">
       <div class="t-item"
-           ng-class="{'t-item--open': panel.isOpen}">
+           ng-class="{'t-item--highlighted': panel.isHighlighted}">
         <button>
           <div class="l-list-inline l-list-inline--x-small">
             <div class="l-list-inline__item is-middle-aligned">
