--- a/app/scripts/templates/toolbar.html
+++ b/app/scripts/templates/toolbar.html
@@ -5,7 +5,7 @@
       <div class="t-item"
            ng-click="clickOpen(tool)"
            ng-mouseenter="hoverOpen(tool)"
-           ng-class="{'t-item--open': tool.isOpen}">
+           ng-class="{'t-item--highlighted': tool.isHighlighted}">
         <button class="t-item__icon"
                 ng-class="{'t-item__icon--large': tool.largeIcon}"
                 style="background-image: url('/images/{{tool.id}}.png');">
@@ -22,7 +22,8 @@
              ng-repeat="subtool in tool.children">
           <div class="td-item"
                ng-mouseenter="hoverOpen(subtool)"
-               ng-class="{'td-item--first': $index == 0}">
+               ng-class="{'td-item--first': $first,
+                          'td-item--highlighted': subtool.isHighlighted}">
             <button>
               <div class="l-list-inline l-list-inline--x-small">
                 <div class="l-list-inline__item is-middle-aligned">
