--- a/app/scripts/templates/panelbar.html
+++ b/app/scripts/templates/panelbar.html
@@ -25,6 +25,7 @@
       </div>
 
       <div class="t-dropdown t-dropdown--rev"
+           ng-click="clickOpen(panel)"
            ng-show="panel.isOpen">
         <img ng-src="/images/{{panel.id}}-panel.png" alt="{{panel.label}}"/>
       </div>
