--- a/app/scripts/templates/panelbar.html
+++ b/app/scripts/templates/panelbar.html
@@ -27,7 +27,9 @@
       <div class="t-dropdown t-dropdown--rev"
            ng-click="clickOpen(panel)"
            ng-show="panel.isOpen">
-        <img ng-src="/images/{{panel.id}}-panel.png" alt="{{panel.label}}"/>
+        <button ng-click="showTweetsFor(panel)">
+          <img ng-src="/images/{{panel.id}}-panel.png" alt="{{panel.label}}"/>
+        </button>
       </div>
     </div>
 
