--- a/app/scripts/templates/toolbar.html
+++ b/app/scripts/templates/toolbar.html
@@ -8,7 +8,8 @@
            ng-class="{'t-item--highlighted': tool.isHighlighted}">
         <button class="t-item__icon"
                 ng-class="{'t-item__icon--large': tool.largeIcon}"
-                style="background-image: url('/images/{{tool.id}}.png');">
+                style="background-image: url('/images/{{tool.id}}.png');"
+                ng-click="showTweetsFor(tool)">
         </button>
 
         <div class="t-item__counter"
@@ -24,7 +25,7 @@
                ng-mouseenter="hoverOpen(subtool)"
                ng-class="{'td-item--first': $first,
                           'td-item--highlighted': subtool.isHighlighted}">
-            <button>
+            <button ng-click="showTweetsFor(subtool)">
               <div class="l-list-inline l-list-inline--x-small">
                 <div class="l-list-inline__item is-middle-aligned">
                   <div class="td-item__icon"
