--- a/app/scripts/templates/tweetList.html
+++ b/app/scripts/templates/tweetList.html
@@ -1,5 +1,47 @@
 <div class="tweet-list">
-  <tweet ng-repeat="t in tweets.all | limitTo: tweets.showItems"
+  <div class="l-block"
+       ng-show="filters.activeCommand">
+    <div class="tweet-list__header">
+      <div class="l-split">
+        <div class="l-split__right">
+          <button class="tweet-list__back"
+                  ng-click="resetActiveCommand()">back to all tweets</button>
+        </div>
+
+        <div class="l-split__left">
+          <div class="tweet-list__subtitle">Tweets about</div>
+        </div>
+      </div>
+
+      <div class="tweet-list__title">{{filters.activeCommand.label}}</div>
+
+      <button ng-mouseenter="highlight()"
+              ng-mouseleave="removeHighlights()"
+              ng-click="revealCommandLocation($event)">
+        <div class="l-list-inline l-list-inline--collapsed">
+          <div class="l-list-inline__item">
+            <div class="tweet-list__path">
+              {{filters.activeCommandLocation.name}} /&nbsp;
+            </div>
+          </div><!--
+          --><div class="l-list-inline__item"
+               ng-repeat="parent in filters.activeCommand.parents"
+               ng-show="parent.label && parent.label != ''">
+            <div class="tweet-list__path">
+              {{parent.label}} /&nbsp;
+            </div>
+          </div><!--
+          --><div class="l-list-inline__item">
+            <div class="tweet-list__path">
+              {{filters.activeCommand.label}}
+            </div>
+          </div>
+        </div>
+      </button>
+    </div>
+  </div>
+
+  <tweet ng-repeat="t in tweets.all | limitTo: tweets.showItems | filter: hasActiveCommand"
          ng-click="activate(t)"
          class="tweet"
          ng-class="{'tweet--is-first': $first,
