--- a/app/scripts/templates/panelbar.html
+++ b/app/scripts/templates/panelbar.html
@@ -1,39 +1,33 @@
-<div class="toolbar toolbar--right">
-  <div ng-repeat="panel in panels">
-    <div class="toolbar__slot"
-         ng-click="clickOpen(panel)"
-         ng-mouseenter="hoverOpen(panel)"
-         ng-if="!panel.divider">
+<div class="toolbar toolbar--right js-menu">
+  <div ng-repeat="item in menu.all">
+    <div class="toolbar__slot">
       <div class="t-item"
-           ng-class="{'t-item--highlighted': panel.isHighlighted}">
-        <button>
+           ng-class="{'t-item--highlighted': item.isHighlighted}">
+        <button ng-click="onItemClick(menu, item)"
+                ng-mouseenter="onItemHover(menu, item)">
           <div class="l-list-inline l-list-inline--x-small">
             <div class="l-list-inline__item is-middle-aligned">
               <div class="t-item__icon"
-                   style="background-image: url('/images/{{panel.id}}.png');">
+                   style="background-image: url('/images/{{item.id}}.png');">
               </div>
             </div>
 
             <div class="l-list-inline__item is-middle-aligned">
-              <div class="t-item__label">{{panel.label}}</div>
+              <div class="t-item__label">{{item.label}}</div>
             </div>
           </div>
         </button>
 
         <div class="t-item__counter t-item__counter--rev"
-             ng-show="panel.tweetsCount > 0">{{panel.tweetsCount}}</div>
+             ng-show="item.tweetsCount > 0">{{item.tweetsCount}}</div>
       </div>
 
       <div class="t-dropdown t-dropdown--rev"
-           ng-click="clickOpen(panel)"
-           ng-show="panel.isOpen">
-        <button ng-click="showTweetsFor(panel)">
-          <img ng-src="/images/{{panel.id}}-panel.png" alt="{{panel.label}}"/>
+           ng-show="item.isOpen">
+        <button ng-click="onItemActivate(menu, item, $event)">
+          <img ng-src="/images/{{item.id}}-panel.png" alt="{{item.label}}"/>
         </button>
       </div>
     </div>
-
-    <div class="toolbar__divider"
-         ng-if="tool.divider"></div>
   </div>
 </div>
